report: add OpenJDK daily report